--- a/MlKit_pose_cameraX_basic-master/app/src/main/AndroidManifest.xml
+++ b/MlKit_pose_cameraX_basic-master/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         </activity>
 
         <activity
-            android:name=".AAction"
+            android:name=".AActionRight"
             android:exported="true">
         </activity>
 
