--- a/MlKit_pose_cameraX_basic-master/app/src/main/AndroidManifest.xml
+++ b/MlKit_pose_cameraX_basic-master/app/src/main/AndroidManifest.xml
@@ -33,6 +33,11 @@
         </activity>
 
         <activity
+            android:name=".AActionLeft"
+            android:exported="true">
+        </activity>
+
+        <activity
             android:name=".kotlin.LivePreviewActivity"
             android:exported="true">
         </activity>
