--- a/MlKit_pose_cameraX_basic-master/app/src/main/AndroidManifest.xml
+++ b/MlKit_pose_cameraX_basic-master/app/src/main/AndroidManifest.xml
@@ -38,7 +38,12 @@
         </activity>
 
         <activity
-            android:name=".kotlin.LivePreviewActivity"
+            android:name=".kotlin.BActionRight"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".kotlin.BActionLeft"
             android:exported="true">
         </activity>
     </application>
